fixed an issue where the todo divs, when deleted, would only remove their inner elements and the empty todo div would be left behind leaving gaps within the todo list. Also added in some light css styling

--- a/index/styles.css
+++ b/index/styles.css
@@ -1,3 +1,23 @@
 body {
   text-align: center;
+  background-color: #D3D3D3;
+  padding: 5px;
+}
+
+#todo-container {
+  width: 300px;
+  border: 1px solid #00FFFF;
+  padding: 10px;
+  margin-top: 100px;
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+}
+
+.todo {
+  padding: 5px;
+}
+
+.span {
+  margin-right: 10px;
 }
